Fix display on mobile devices

--- a/src/styles/components/contact-form.scss
+++ b/src/styles/components/contact-form.scss
@@ -7,4 +7,12 @@
     row-gap: 20px;
     max-width: 480px;
     margin-inline: auto;
+
+    @media (max-width: 659px) {
+        row-gap: 10px;
+
+        @include e(button) {
+            width: 100%;
+        }
+    }
 }
